static/css/default.css
@font-face {
  font-family: 'FiraCode';
  src: url('../fonts/firacode/FiraCode-Medium.woff') format('woff'),
  url('../fonts/firacode/FiraCode-Medium.ttf') format('ttf'),
  url('../fonts/firacode/FiraCode-Bold.woff') format('woff'),
  url('../fonts/firacode/FiraCode-Bold.ttf') format('ttf');
}


body {
    margin: 0;
    padding: 0;
    color: #ebdbb2;
    background-color: #282828;
    font-family: 'FiraCode', monospace;
    font-size: 18px;
}
b {
    font-weight: bold;
    text-shadow: 0 0 1px rgba(255,255,255,0.75);
}
img {
    max-width: 100%;
    max-height: 50vh;
}
#console_wrapper {
    height: 100vh;
    width: 100vw;
    max-width: 100%;
}
#console {
    margin: 0;
    padding: 40px 50px;
}
@media screen and (min-width: 800px) {
    #console {
        padding: 20px 30px;
    }
}
#log {
    white-space: break-spaces;
}
#input {
    font-family: inherit;
    font-size: inherit;
    padding: 0;
    margin: 0;
    color: #ebdbb2;
    caret-color: #00000000;
    background: none;
    border: none;
    width: 70%;
    position: absolute;
    outline: none;
}

#pre_cursor {
    color: #00000000;
}
.on {
    box-shadow: 0 100px 0 #ebdbb2 inset;
}

input[type="text"] {
    font-size: inherit;
}

.bright { color: #d3f5d870; text-shadow: 0 0 5px #ffffff70; }
.background { color: #282828; }
.default { color: #ebdbb2; }
.blue, a { color: #83a598; }
.yellow { color: #fabd2f; }
.aqua { color: #8ec07c; }
.green { color: #b8bb26; }
.red { color: #fb4934; }
.purple { color: #d3869b; }

